fixing margin on text wrap img

--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -61,7 +61,7 @@ h1,h2,h3,h4 {
 /* text wrapper stuff */
 .wrapper img {
     width:250px;
-    margin:25px;
+    margin:15px;
     float:left;
 }
 
